[Implementation]: add different routes
